--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -9,7 +9,7 @@ setTimeout(function sunrise () {
     document.getElementsByClassName('header')[0].style.backgroundColor = '#118798';
 }, 0);
 </script>
-
+kjhkjhkjhkjhkjh
 <div class="default-page">
     <div class="header">
         <h1 id="main-title" class="container"><%= __('A brand new app.') %></h1>
